v1.??? -
Additions:
* EntityPlayer:
	- Get/SetBombPlaceDelay
	- Get/SetBloodLustCounter
	- New functionality for blocking items:
		BlockCollectible(int itemID)
		UnblockCollectible(int itemID)
		IsCollectibleBlocked(int itemID)
	- Change to HasCollectible and GetCollectibleNum:
		new optional boolean (IgnoreBlock), ignores collectible block when set to true
* Input:
	- GetDeviceNameByIdx
* Isaac:
	- StartNewGame(int playertype, int challenge, int difficulty, int seed), allows starting the game from within the main menu
* MenuManager:
	- SetInputMask(int mask) for use with the new ButtonActionBitwise enum, selectively allows/disallows the game's menu read certain inputs, useful for custom menus
	- GetInputMask()
* RoomConfig:
	RoomConfig:GetStage(StbType)
* RoomConfigStage
	* Get/Set DisplayName, Suffix, PlayerSpot, BossSpot, Music, Backdrop
	* GetRoomSet(Mode)
* RoomConfigSet:
	* Acts like other ArrayProxy classes, but for RoomConfigRoom
	* __len and Get method, Size const variable
* All stages now have a spritesheet suffix (formatted _[stage name, no spaces], ex _burningbasement)
/newline/
v1.0.8c - 
Fixes:
* Fixed adding a callback function with an optional param to a vanilla callback that does not support optional params leading to that function never being called, where it used to previously.
* Fixed the result of Isaac.GetCallbacks() no longer having a metatable.
/newline/
v1.0.8b - 
Fixes:
* Fixed the MC_PLAYER_GET_HEALTH_TYPE callback causing the last heart to render underneath the first one.
/newline/
v1.0.8a - 
Fixes:
* Fixed issues with EntityPlayer:GetSmeltedTrinkets() and EntityPlayer:GetFootprintColor()
/newline/
v1.0.8 - 
Additions:
* New general callback improvements to address some performance issues on some scenarios
* Deal rooms can now generate variants above 100
* Add new BlendTypes CONSTANT, OVERLAY
* EntityPlayer:
	- SetHeadDirection(Direction, Time, Force)
	- Get/SetHeadDirectionLockTime
* Game:
	- SetDonationMod[Angel/Greed]
* ItemPool: